<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D966F3"
    tools:context=".SurveyConfirm">

    <TextView
        android:id="@+id/txtConfirm"
        android:layout_width="307dp"
        android:layout_height="20dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/subject_survey_confirmation"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtThanks"
        android:layout_width="283dp"
        android:layout_height="111dp"
        android:text="@string/thank_you_for_participarting_in_our_survey"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="106dp"
        android:layout_height="58dp"
        android:backgroundTint="#43399E"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />
</androidx.constraintlayout.widget.ConstraintLayout>